Don't use deep pagination to fetch all entries #7139
(cherry picked from commit 62018bc8dade5edaefcade95d88bf16907b55240)